styling home page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,5 +4,6 @@
       "videos": "Vidéos",
       "categories": "Catégories"
     },
-    "readmore": "Lire la suite"
+    "readmore": "Lire la suite",
+    "search": "Recherche"
   }
